--- a/index.html
+++ b/index.html
@@ -241,9 +241,9 @@
     <h2 id="resultHeading" class="text-2xl font-bold mb-2" style="color:#1f2937;">Your Reveal URL is Ready!</h2>
     <p id="resultSub" class="mb-2 text-gray-700 hidden">Your link has been shortened to hide the surprise! Share this clean link with friends and family.</p>
     <p class="font-semibold mb-1">Your shareable link:</p>
-    <div class="flex items-center mb-4">
-      <input id="generatedUrl" readonly class="flex-1 px-3 py-2 border border-gray-300 rounded text-sm" />
-      <button id="copyBtn" class="ml-2 px-4 py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]" aria-live="polite">Copy</button>
+    <div class="flex flex-col md:flex-row items-center mb-4">
+      <input id="generatedUrl" readonly class="w-full md:flex-1 px-3 py-2 border border-gray-300 rounded text-sm mb-2 md:mb-0" />
+      <button id="copyBtn" class="w-full md:w-auto md:ml-2 px-4 py-2 rounded bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]" aria-live="polite">Copy</button>
     </div>
     <div id="statusMsg" class="text-sm text-gray-700 mb-3"></div>
     <a id="previewLink" href="#" target="_blank" class="block text-center py-2 rounded mb-3 bg-[#c0dcca] text-gray-800 hover:bg-[#a8d0b5]">Preview Page</a>
