--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="bg-white rounded-2xl shadow-xl p-8" id="section1">
       <div class="flex items-center mb-6">
         <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">1</div>
-        <h2 class="text-2xl font-bold text-gray-800">PAGE 1</h2>
+        <h2 class="text-2xl font-bold text-gray-800">Colors & Style</h2>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
         <div class="md:col-span-2 grid grid-cols-1 md:grid-cols-2 gap-8">
@@ -157,7 +157,7 @@
     <div class="bg-white rounded-2xl shadow-xl p-8" id="section2">
       <div class="flex items-center mb-6">
         <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">2</div>
-        <h2 class="text-2xl font-bold text-gray-800">PAGE 2</h2>
+        <h2 class="text-2xl font-bold text-gray-800">Page 1</h2>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div>
@@ -178,7 +178,7 @@
     <div class="bg-white rounded-2xl shadow-xl p-8" id="section3">
       <div class="flex items-center mb-6">
         <div class="rounded-full w-8 h-8 flex items-center justify-center font-bold text-sm mr-3" style="background-color:#ffb88d;color:#1f2937;">3</div>
-        <h2 class="text-2xl font-bold text-gray-800">Additional Details</h2>
+        <h2 class="text-2xl font-bold text-gray-800">Page 2</h2>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
